--- a/src/pages/home/diary/diary.html
+++ b/src/pages/home/diary/diary.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 10px;" (click)="goDiaryDetail()">
-    <div class="titleWrap">
+    <div class="titleWrap" *ngIf="from != 'me'">
         <div class="avatarWrap">
             <img [src]="diaryInfo.avatar" style="width: 40px;height: 40px;">
         </div>
