--- a/src/pages/home/video/homevideo.html
+++ b/src/pages/home/video/homevideo.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 10px;">
-    <div class="titleWrap">
+    <div class="titleWrap" *ngIf="from != 'me'">
         <div class="avatarWrap">
             <img [src]="videoInfo.avatar" style="width: 40px;height: 40px;">
         </div>
