--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,111 +1,22 @@
-<ion-content padding class="transparent-header">
-    <!--<ion-header>-->
-    <!--<ion-navbar>-->
-    <!--</ion-navbar>-->
-    <!--</ion-header>-->
-    <div id="profile-bg" style="background: url(assets/img/background/background-4.jpg)"></div>
-    <div id="content" *ngIf="user">
-        <div id="profile-info" padding>
-            <!-- <ion-avatar item-start>
-                <img src="{{url + user.avatar}}">
-            </ion-avatar> -->
-            <!-- <img id="profile-image" [src]="url + user.avatar"> -->
-            <span id="profile-image" [ngStyle]="{'background-image': 'url(' +  user.avatar + ')'}"></span>
-            <ion-icon name="ios-arrow-round-back" class="arrowBack" (click)="goBack()" *ngIf="fromOtherUser"></ion-icon>
-            <ion-icon name="ios-settings-outline" tappable (click)="openSetting()" *ngIf="!fromOtherUser" class="setting"></ion-icon>
-            <div id="profile-name">{{user.username}}</div>
-            <p class="profile-description">{{user.description}}</p>
-            <div class="follow-area">
-                <div class="left">
-                    <div>
-                        <div>{{user.follower_count}}</div>
-                        <div>关注</div>
-                    </div>
-                    <div>
-                        <div>{{user.idol_count}}</div>
-                        <div>粉丝</div>
-                    </div>
-                </div>
-                <!--<div class="right">
-          <button ion-button *ngIf="!following" small color="purple" (click)="follow()">关注</button>
-          <button ion-button *ngIf="following" class="follow-button" small color="purple" (click)="follow()">Following<ion-icon name="checkmark"></ion-icon></button>
-        </div>-->
-            </div>
-            <div style="text-align:center;">
-                <img src="assets/img/tips.png" style="width: 80%;">
-            </div>
+<ion-content class="transparent-header" style="background: #F8F8F8;">
+    <div style="height: 270px;background:url('assets/img/meBg.png');background-position: center;background-size: cover;position: relative;padding-top: 90px;">
+        <ion-icon name="ios-arrow-round-back" style="font-size: 40px;color: #fff;position: absolute;top: 20px;left: 20px;" *ngIf="fromOtherUser"></ion-icon>
+        <span style="font-size: 15px;color: #fff;display: inline-block;background: #EF7A7A;padding: 5px 10px;border-radius: 5px;position: absolute;top: 20px;right: 20px;" *ngIf="fromOtherUser">+关注</span>
+        <div style="width: 80px;height: 80px;border: 2px solid #fff;border-radius: 50%;overflow: hidden;margin: 0 auto;">
+            <img src="assets/img/guide1.jpg" style="width: 80px;height: 80px;">
         </div>
-        <hr/>
-        <timeline endIcon="call">
-            <timeline-item *ngFor="let item of items;let i = index;">
-                <timeline-time [time]="item.created_at.split('-')[1]" *ngIf="item.created_at.split('-')[1] != items[i].created_at.split('-')[1] || i==0"></timeline-time>
-                <ion-icon></ion-icon>
-                <ion-card *ngIf="item.content_type == 'topic'">
-                    <ion-item class="topicItem">
-                        <div class="image-box" [ngStyle]="{'background-image': 'url(' + item.image_set[0] + ')'}" (click)="goTopicDetail(item.object_id)">
-                            <div class="content">
-                                <div (click)="goTopicDetail(item.object_id)">#{{item.title}}#</div>
-                            </div>
-                        </div>
-                    </ion-item>
-                </ion-card>
-                <ion-card *ngIf="item.content_type == 'blog'">
-                    <ion-item class="slideItem">
-                        <div class="slideCard">
-                            <div class="content">
-                                <div class="title" (click)="goBlogDetail(item.object_id)">{{item.title}}</div>
-                                <img [src]="item.image_set[0]" (click)="goBlogDetail(item.object_id)">
-                                <div class="subTitle" (click)="goBlogDetail(item.object_id)">{{item.prefetch_content.length > 50 ? item.prefetch_content.substring(50) : item.prefetch_content}}</div>
-                            </div>
-                        </div>
-                        <div class="bottomContent">
-                            <button ion-button outline>文章</button>
-                            <div class="mark">{{item.comment_count}}浏览.{{item.collect_count}}收藏</div>
-                        </div>
-                    </ion-item>
-                </ion-card>
-                <ion-card class="diaryCard" *ngIf="item.content_type == 'diary'">
-                    <ion-item>
-                        <ion-avatar item-start>
-                            <img [src]="item?.avatar">
-                        </ion-avatar>
-                        <div>
-                            <span class="userName">{{item?.username}}</span>
-                            <span class="userTime">{{item?.created_at.substring(5,10)}}</span>
-                        </div>
-                    </ion-item>
-                    <!--<img src="{{item?.cover}}">-->
-                    <ss-comment-attachments *ngIf="item?.image_set" [attachments]="item.image_set"></ss-comment-attachments>
-                    <ion-card-content>
-                        <h2 style="color: #484848;" (click)="goDiaryDetail(item.object_id)">{{item?.title}}</h2>
-                        <p class="content" (click)="goDiaryDetail(item.object_id)">{{item.prefetch_content.length > 50 ? item.prefetch_content.substring(50) : item.prefetch_content}}</p>
-                        <div class="diaryCount">
-                            <div>
-                                <ion-icon name="md-heart-outline"></ion-icon>
-                                <span style="color: #484848;font-size: 18px;">{{item.like_count}}</span>
-                            </div>
-                            <div>
-                                <ion-icon name="ios-chatbubbles-outline"></ion-icon>
-                                <span style="color: #484848;font-size: 18px;">{{item.comment_count}}</span>
-                            </div>
-                            <div>
-                                <ion-icon name="ios-star-outline"></ion-icon>
-                                <span style="color: #484848;font-size: 18px;">{{item.collect_count}}</span>
-                            </div>
-                        </div>
-                    </ion-card-content>
-                </ion-card>
-            </timeline-item>
-        </timeline>
+        <div style="text-align: center;margin-top: 10px;">
+            <span style="font-size: 16px;color: #fff;">做一个好学生</span>
+        </div>
+        <p style="margin: 0;text-align: center;font-size: 14px;color: #fff;margin-top: 5px;">21岁 北京</p>
+        <p style="font-size: 12px;color: #fff;margin: 0;text-align: center;margin-top: 15px;">have fun</p>
     </div>
-    <ion-infinite-scroll immediate-check="false" distance="1%" (ionInfinite)="doInfinite($event)">
+    <div *ngFor="let item of userInfo" style="margin-bottom: 10px;background: #fff;padding-top: 10px;">
+        <article *ngIf="item.content_type == 'blog'" [articleInfo]="item" from="me"></article>
+        <diary *ngIf="item.content_type == 'diary'" [diaryInfo]="item" from="me"></diary>
+        <homevideo *ngIf="item.content_type == 'vlog'" [videoInfo]="item" from="me"></homevideo>
+    </div>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
 </ion-content>
-<!--<ion-header>-->
-<!--<ion-navbar>-->
-<!--<ion-title>profile</ion-title>-->
-<!--</ion-navbar>-->
-<!--</ion-header>-->
-<!--<ion-content padding>-->
-<!--</ion-content>-->
